--- a/nightscout/config.json
+++ b/nightscout/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Nightscout",
-  "version": "1.4.1",
+  "version": "1.4.4",
   "slug": "nightscout",
   "description": "Nightscout acts as a web-based CGM (Continuous Glucose Montinor) to allow multiple caregivers to remotely view a patients glucose data in realtime.",
   "url": "https://github.com/mrschloemp/addon-nightscout",
@@ -12,7 +12,7 @@
   "startup": "services",
   "init": "false",
   "boot": "auto",
-  "image": "marciogranzotto/image-{arch}-addon-nightscout",
+  "image": "mrschloemp/image-{arch}-addon-nightscout",
   "hassio_role": "default",
   "ports": {
     "5423/tcp": 5423
